site/src/styles/pyrokai.css
:root {
		--sl-color-white: #faf6f5;
		--sl-color-gray-1: #faf6f5;
		--sl-color-gray-2: #999593;
		--sl-color-gray-3: #999593;
		--sl-color-gray-4: #696463;
		--sl-color-gray-5: #524e4c;
		--sl-color-gray-6: #242120;
		--sl-color-black: #151312;

		--sl-color-orange-low: #612c0f;
		--sl-color-orange: #ea7332;
		--sl-color-orange-high: #ffc3a7;
		--sl-color-green-low: #2d460e;
		--sl-color-green: #75ad2f;
		--sl-color-green-high: #bde09e;
		--sl-color-blue-low: #0c4067;
		--sl-color-blue: #2aa0f9;
		--sl-color-blue-high: #aed8ff;
		--sl-color-purple-low: #3e3366;
		--sl-color-purple: #9b84f7;
		--sl-color-purple-high: #d2cbff;
		--sl-color-red-low: #612734;
		--sl-color-red: #ec6785;
		--sl-color-red-high: #ffbfc9;

		--sl-color-accent-low: #612c0f;
		--sl-color-accent: #ea7332;
		--sl-color-accent-high: #ffc3a7;

		--sl-color-text: #faf6f5;
		--sl-color-text-accent: #ffc3a7;
		--sl-color-text-invert: #151312;
		--sl-color-bg: #151312;
		--sl-color-bg-nav: #242120;
		--sl-color-bg-sidebar: #242120;
		--sl-color-bg-inline-code: #312d2b;
		--sl-color-bg-accent: #ffc3a7;
		--sl-color-hairline-light: #3c3836;
		--sl-color-hairline: #3c3836;
		--sl-color-hairline-shade: #524e4c;
	}

	:root[data-theme='light'] {
		--sl-color-white: #242120;
		--sl-color-gray-1: #242120;
		--sl-color-gray-2: #807c7a;
		--sl-color-gray-3: #807c7a;
		--sl-color-gray-4: #999593;
		--sl-color-gray-5: #b4afad;
		--sl-color-gray-6: #f0edec;
		--sl-color-gray-7: #f0edec;
		--sl-color-black: #faf6f5;

		--sl-color-orange-low: #ffd6c2;
		--sl-color-orange: #b65318;
		--sl-color-orange-high: #612c0f;
		--sl-color-green-low: #cfeab6;
		--sl-color-green: #568413;
		--sl-color-green-high: #2d460e;
		--sl-color-blue-low: #c7e3ff;
		--sl-color-blue: #0979c4;
		--sl-color-blue-high: #0c4067;
		--sl-color-purple-low: #dfdbff;
		--sl-color-purple: #7662c2;
		--sl-color-purple-high: #3e3366;
		--sl-color-red-low: #ffd2d9;
		--sl-color-red: #b84963;
		--sl-color-red-high: #612734;

		--sl-color-accent-low: #ffd6c2;
		--sl-color-accent: #b65318;
		--sl-color-accent-high: #612c0f;

		--sl-color-text: #242120;
		--sl-color-text-accent: #b65318;
		--sl-color-text-invert: #faf6f5;
		--sl-color-bg: #faf6f5;
		--sl-color-bg-nav: #f0edec;
		--sl-color-bg-sidebar: #faf6f5;
		--sl-color-bg-inline-code: #e4e0de;
		--sl-color-bg-accent: #b65318;
		--sl-color-hairline-light: #cdc9c7;
		--sl-color-hairline: #cdc9c7;
		--sl-color-hairline-shade: #b4afad;
	}

:root {
	--sl-font: 'Inter Variable', var(--sl-font-system);
	--sl-font-mono: 'JetBrains Mono', var(--sl-font-system-mono);
}

